--- a/package.json
+++ b/package.json
@@ -8,24 +8,41 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.1.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "expo": "~38.0.9",
+    "expo-font": "^8.2.2",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.10.2",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/react": "^16.9.45",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.63.6",
+    "@types/styled-components": "^5.1.2",
     "babel-jest": "~25.2.6",
+    "eslint": "^6.6.0",
+    "eslint-config-universe": "^2.1.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "prettier": "^1.19.0",
+    "react-test-renderer": "~16.11.0",
+    "typescript": "^3.9.7"
   },
   "jest": {
     "preset": "react-native"
