--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.10.2",
+    "react-native-reanimated": "^2.0.0-alpha.5",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.10.1",
