--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
+    "axios": "^0.19.2",
     "expo": "~38.0.9",
     "expo-font": "^8.2.2",
     "expo-splash-screen": "^0.5.0",
@@ -28,7 +30,8 @@
     "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.10.1",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -36,6 +39,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.6",
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.4",
     "babel-jest": "~25.2.6",
     "eslint": "^6.6.0",
     "eslint-config-universe": "^2.1.0",
