--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-picker-select": "^8.0.0",
     "react-native-reanimated": "^2.0.0-alpha.5",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
@@ -41,10 +42,7 @@
     "@types/styled-components": "^5.1.2",
     "@types/yup": "^0.29.4",
     "babel-jest": "~25.2.6",
-    "eslint": "^6.6.0",
-    "eslint-config-universe": "^2.1.0",
     "jest": "~25.2.6",
-    "prettier": "^1.19.0",
     "react-test-renderer": "~16.11.0",
     "typescript": "^3.9.7"
   },
