--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "expo": "~38.0.9",
     "expo-font": "^8.2.2",
     "expo-splash-screen": "^0.5.0",
