--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/date-fns": "^2.6.0",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.6",
