--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/checkbox": "^0.5.0",
     "@react-native-community/datetimepicker": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/picker": "^1.6.6",
