--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.10",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/date-fns": "^2.6.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.6",
